--- a/src/css/profilePage.css
+++ b/src/css/profilePage.css
@@ -6,7 +6,9 @@
     align-items: flex-start;
     font-size: 8vw;
     color: white;
-    background: #222;
+    background-color: #222;
+    background-size: cover;
+    background-position: center center;
 }
 
 .profilePage .name{
