--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,15 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
+.back{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 3vw;
+    border: 1px solid white;
+    padding: 10px 20px;
+    background: unset;
+    color: white;
+    font-family: unset;
+}
