--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,10 @@
 *{
     box-sizing: border-box;
+    font-family: Poppins, sans-serif !important;
 }
 
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+a{
+    text-decoration: none;
 }
 
 .back{
