--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -1,3 +1,8 @@
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .edit-profile-button{
     position: fixed;
     bottom: 30px;
