--- a/src/css/profilePage.css
+++ b/src/css/profilePage.css
@@ -12,13 +12,14 @@
     padding: 4px;
     background-attachment: fixed;
     line-height: 1.3;
+    text-shadow: 0 0 2px #0000003d;
 }
 
 .profilePage .name{
     font-size: 14vw;
-    /* spacer that pushes profile contents down page */
-    margin-top: 80vh;
-    margin-bottom: 4px;
+    /* top margin acts as spacer that pushes profile contents down page */
+    margin-top: 74vh;
+    margin-bottom: 0;
 }
 
 .profilePage label{
@@ -35,13 +36,25 @@
 
 .profilePage .last-online{
     font-size: 4vw;
-    margin-bottom: 4px;
+    margin-bottom: 12px;
 }
 
 .profilePage .about-me{
-    margin-bottom: 14px;
+    margin-bottom: 20px;
 }
 
 .profilePage .favorite-games{
-    margin-bottom: 14px;
+    margin-bottom: 20px;
+}
+
+.profilePage .chat-button{
+    background: white;
+    padding: 8px 60px;
+    border-radius: 30px;
+    margin: 24px 0;
+    font-size: 4.6vw;
+}
+
+.profilePage .chat-link{
+    align-self: center;
 }
