--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,9 +17,9 @@ a{
     top: 20px;
     left: 20px;
     font-size: 3vw;
-    border: 1px solid white;
+    border: 1px solid #ffffff94;
     padding: 10px 20px;
-    background: unset;
     color: white;
     font-family: unset;
+    background: #00000078;
 }
