--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -12,5 +12,8 @@
     color: black;
     border-radius: 30px;
     padding: 20px 50px;
-    font-size: 18px;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
